[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaming-cafe-booking-system"
version = "1.0.0"
description = "ระบบจองเครื่องร้านเกม - OOP Final Project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
